--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DB_HOST=mongodb://localhost:27017/online_chat_app
 SALT=JiafCvpyBJ4inJYBH8L3qVZCvsn4WYY8
 SECRET=ekgZPs7VFl1vQYlbN6H1pY8DZL2lwxZF
+MESSAGE_URL=http://localhost:3000/message
